# AudioMoon

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt
examples/aiff_loader/: CMakeLists.txt  aiff_loader.cpp
libs/: CMakeLists.txt
src/audio/: AudioPlayer.cpp  AudioPlayer.h
src/data/: AudioFile.h  AudioObject.h  PlayerObject.h
